--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,16 @@
+2011-05-23 Lars Magnusson <lavima@gmail.com>
+ * Started work on the content compilers
+ * Minor refactoring in the content readers
+
 2011-05-21 Lars Magnusson <lavima@gmail.com>
-  - This is now the only place for commenting changes.  
+ * This is now the only place for commenting changes.  
 
 2007-01-06 Rob Loach <http://www.robloach.net>
-  - Pong example (builds but doesn't run)
+ * Pong example (builds but doesn't run)
 
 2006-11-03  C.J. Adams-Collier  <cjcollier@colliertech.org>
-  - ChangeLog
-  - Created initial log entry; please add items to this file in
-    roughly this format when you make major changes.  Small things
-    will be fine without an entry here if you add an entry when 
-    commiting to the repository
+ * ChangeLog
+ * Created initial log entry; please add items to this file in
+   roughly this format when you make major changes.  Small things
+   will be fine without an entry here if you add an entry when 
+   commiting to the repository
