--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-01-19 Lars Magnusson <lavima@gmail.com>
+ * Included patch by panzer1996@gmail.com
+
 2011-12-22 Lars Magnusson <lavima@gmail.com>
  * Changed runtime to Mono/.NET 40
  * Added patch by ggulati@live.com
